[gd_scene load_steps=2 format=3 uid="uid://c88pigwkq2nsn"]

[ext_resource type="Script" path="res://scenes/Menus/network_menu.gd" id="1_2xeu0"]

[node name="NetworkMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2xeu0")

[node name="HostOrJoin" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostOrJoin"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -62.5
offset_right = 59.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Ip" type="TextEdit" parent="HostOrJoin/VBoxContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
placeholder_text = "127.0.0.1"

[node name="Join" type="Button" parent="HostOrJoin/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Host" type="Button" parent="HostOrJoin/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="ReadyUp" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -57.0
offset_right = 250.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0

[node name="Waiting" type="Label" parent="ReadyUp"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.0
offset_top = -13.0
offset_right = 144.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Waiting for all players to click ready..."

[node name="ReadyLabel" type="Label" parent="ReadyUp"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -15.5
offset_right = 46.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Ready? "
vertical_alignment = 1

[node name="Ready" type="CheckBox" parent="ReadyUp/ReadyLabel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -10.5
offset_right = -1.0
offset_bottom = 13.5
grow_horizontal = 0
grow_vertical = 2
alignment = 1
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="HostOrJoin/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="HostOrJoin/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="toggled" from="ReadyUp/ReadyLabel/Ready" to="." method="_on_ready_toggled"]
